--- a/Projet Pizzeria/MainWindow.xaml
+++ b/Projet Pizzeria/MainWindow.xaml
@@ -9,7 +9,22 @@
     <Grid>
         <TabControl>
             <TabItem Header="Client / Effectif">
-                <Label Content="Content goes here..." />
+                <Grid  Margin="10,0,10,10">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="173*" />
+                        <ColumnDefinition Width="19*"/>
+                        <ColumnDefinition Width="575*"/>
+                    </Grid.ColumnDefinitions>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="Auto"/>
+                    </Grid.RowDefinitions>
+
+                    <DataGrid Grid.ColumnSpan="3">
+
+                    </DataGrid>
+
+
+                </Grid>
             </TabItem>
             <TabItem Header="Commandes" />
             <TabItem Header="Statistiques" />
