add client and commande views

--- a/Projet Pizzeria/MainWindow.xaml
+++ b/Projet Pizzeria/MainWindow.xaml
@@ -4,29 +4,19 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Projet_Pizzeria"
+        xmlns:localview="clr-namespace:Projet_Pizzeria.View"
         mc:Ignorable="d"
         Title="Projet Pizzeria" Height="450" Width="800">
+
     <Grid>
-        <TabControl>
+        <TabControl TabStripPlacement="Left">
             <TabItem Header="Client / Effectif">
-                <Grid  Margin="10,0,10,10">
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="173*" />
-                        <ColumnDefinition Width="19*"/>
-                        <ColumnDefinition Width="575*"/>
-                    </Grid.ColumnDefinitions>
-                    <Grid.RowDefinitions>
-                        <RowDefinition Height="Auto"/>
-                    </Grid.RowDefinitions>
-
-                    <DataGrid Grid.ColumnSpan="3">
-
-                    </DataGrid>
-
-
-                </Grid>
+                <localview:ClientView />
             </TabItem>
-            <TabItem Header="Commandes" />
+            
+            <TabItem Header="Commandes">
+                <localview:CommandeView />
+            </TabItem>
             <TabItem Header="Statistiques" />
             <TabItem Header="Communication" />
         </TabControl>
