--- a/Projet Pizzeria/MainWindow.xaml
+++ b/Projet Pizzeria/MainWindow.xaml
@@ -1,19 +1,22 @@
-﻿<Window x:Class="Projet_Pizzeria.MainWindow"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:Projet_Pizzeria"
-        xmlns:localview="clr-namespace:Projet_Pizzeria.View"
-        mc:Ignorable="d"
-        Title="Projet Pizzeria" Height="500" Width="900">
+﻿<Window
+    x:Class="Projet_Pizzeria.MainWindow"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:local="clr-namespace:Projet_Pizzeria"
+    xmlns:localview="clr-namespace:Projet_Pizzeria.View"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    Title="Projet Pizzeria"
+    Width="900"
+    Height="500"
+    mc:Ignorable="d">
 
     <Grid>
         <TabControl TabStripPlacement="Left">
             <TabItem Header="Client / Effectif">
                 <localview:ClientView />
             </TabItem>
-            
+
             <TabItem Header="Commandes">
                 <localview:CommandeView />
             </TabItem>
