--- a/Projet Pizzeria/View/CommandeView.xaml
+++ b/Projet Pizzeria/View/CommandeView.xaml
@@ -1,27 +1,35 @@
-﻿<UserControl x:Class="Projet_Pizzeria.View.CommandeView"
-             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:Projet_Pizzeria.View"
-             xmlns:fa="http://schemas.fontawesome.io/icons/"
-             mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800">
+﻿<UserControl
+    x:Class="Projet_Pizzeria.View.CommandeView"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:fa="http://schemas.fontawesome.io/icons/"
+    xmlns:local="clr-namespace:Projet_Pizzeria.View"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    d:DesignHeight="450"
+    d:DesignWidth="800"
+    mc:Ignorable="d">
 
     <DockPanel>
-        <!-- Toolbar -->
+        <!--  Toolbar  -->
         <ToolBarTray DockPanel.Dock="Top">
             <ToolBar>
                 <Button ToolTip="Ouvrir une sauvegarde">
                     <StackPanel>
-                        <fa:ImageAwesome Icon="FolderOpen" Width="16" Height="16"/>
+                        <fa:ImageAwesome
+                            Width="16"
+                            Height="16"
+                            Icon="FolderOpen" />
                         <TextBlock>Ouvrir</TextBlock>
                     </StackPanel>
                 </Button>
 
                 <Button ToolTip="Exporter dans un fichier">
                     <StackPanel>
-                        <fa:ImageAwesome Icon="Share" Width="16" Height="16"/>
+                        <fa:ImageAwesome
+                            Width="16"
+                            Height="16"
+                            Icon="Share" />
                         <TextBlock>Export.</TextBlock>
                     </StackPanel>
                 </Button>
@@ -30,43 +38,55 @@
             <ToolBar>
                 <Button ToolTip="Ajouter une commande">
                     <StackPanel>
-                        <fa:ImageAwesome Icon="Plus" Width="16" Height="16"/>
+                        <fa:ImageAwesome
+                            Width="16"
+                            Height="16"
+                            Icon="Plus" />
                         <TextBlock>Nouv. com.</TextBlock>
                     </StackPanel>
                 </Button>
             </ToolBar>
 
             <ToolBar>
-                <RadioButton GroupName="stateCommande" 
-                             ToolTip="Commandes en préparation" 
-                             ToolBar.OverflowMode="Never">
+                <RadioButton
+                    GroupName="stateCommande"
+                    ToolBar.OverflowMode="Never"
+                    ToolTip="Commandes en préparation">
                     <StackPanel>
-                        <fa:ImageAwesome Icon="ShoppingBasket" Width="16" Height="16"/>
+                        <fa:ImageAwesome
+                            Width="16"
+                            Height="16"
+                            Icon="ShoppingBasket" />
                         <TextBlock>Prép.</TextBlock>
                     </StackPanel>
                 </RadioButton>
 
                 <RadioButton GroupName="stateCommande" ToolTip="Commandes en livraison">
                     <StackPanel>
-                        <fa:ImageAwesome Icon="Truck" Width="16" Height="16"/>
+                        <fa:ImageAwesome
+                            Width="16"
+                            Height="16"
+                            Icon="Truck" />
                         <TextBlock>Livr.</TextBlock>
                     </StackPanel>
                 </RadioButton>
 
                 <RadioButton GroupName="stateCommande" ToolTip="Commandes fermées">
                     <StackPanel>
-                        <fa:ImageAwesome Icon="CalendarTimesOutline" Width="16" Height="16"/>
+                        <fa:ImageAwesome
+                            Width="16"
+                            Height="16"
+                            Icon="CalendarTimesOutline" />
                         <TextBlock>Ferm.</TextBlock>
                     </StackPanel>
                 </RadioButton>
 
-                <Separator/>
+                <Separator />
 
                 <StackPanel>
-                    <TextBox Width="100"/>
+                    <TextBox Width="100" />
                     <TextBlock HorizontalAlignment="Center">No. Commande</TextBlock>
                 </StackPanel>
-
             </ToolBar>
         </ToolBarTray>
 
