--- a/Projet Pizzeria/View/ClientView.xaml
+++ b/Projet Pizzeria/View/ClientView.xaml
@@ -21,7 +21,7 @@
         <!--  Toolbar  -->
         <ToolBarTray DockPanel.Dock="Top">
             <ToolBar>
-                <Button ToolTip="Ouvrir une sauvegarde">
+                <Button Name="Import" ToolTip="Ouvrir une sauvegarde">
                     <StackPanel>
                         <fa:ImageAwesome
                             Width="16"
@@ -31,7 +31,10 @@
                     </StackPanel>
                 </Button>
 
-                <Button ToolTip="Exporter dans un fichier">
+                <Button
+                    Name="Export"
+                    Click="Export_Click"
+                    ToolTip="Exporter dans un fichier">
                     <StackPanel>
                         <fa:ImageAwesome
                             Width="16"
