--- a/Projet Pizzeria/View/NewClientDialog.xaml
+++ b/Projet Pizzeria/View/NewClientDialog.xaml
@@ -7,6 +7,7 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     Title="Nouveau Client"
     ContentRendered="Window_ContentRendered"
+    ResizeMode="NoResize"
     SizeToContent="WidthAndHeight"
     WindowStartupLocation="CenterOwner"
     mc:Ignorable="d">
